Add spring retry for third-party service calls